fix some source code flaw
- 更改所有 charset 設定為 java.nio.charset.StandardCharsets
- 針對 package 架構性進行了調整